# SkyPro_homework

./: README.md  example.txt  file.json  main.py  module_2.py  module_3.py  test.py
ENV_DIR/: pyvenv.cfg
course_paper_1/: example.txt  main.py  morse_code.py
course_paper_2/: basic_word.py  example.txt  main.py  players.py  utils.py
home_work1_beta/: main.py
home_work1_beta/Homework_module_Git/: task1.py
home_work1_beta/work_with_'*'/: additional_task.py
home_work_beta_group/: pyproject.toml
home_work_beta_group/Homework_module_Git/: task2.py
home_work_beta_group/home_work_advanced_git/: additional_task_1.py  additional_task_2.py  task_leetcode.py
home_work_beta_group/work_with_stars/: additional_task.py
module_2/: main.py
module_4/: main.py  module_4.txt
module_6/: main.py
module_7/: main.py  utils.py
module_8/: main.py  question.py  utils.py
