[tool.poetry]
name = "home-work1-beta"
version = "0.1.0"
description = ""
authors = ["deniskhudyakov <denis.hudyakov27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
